--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ table {
 	--location-icon-color: indianred;
 	--main-hsl-color: #007ac9;
 	--main-button-color: green;
-	--header-color: #e7ecef;
+	--header-color: white;
 	--text-color: #e7ecef;
 	--text-hover: #998da0;
 }
@@ -72,7 +72,7 @@ header{
   background:  var(--header-color);
   color: white;
   display: flex;
-  height: 60px;
+  height: 65px;
     border-bottom-right-radius: 15px;
     border-bottom-left-radius: 15px;
 }
@@ -111,7 +111,7 @@ li a {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-    margin-top:2px;
+    margin-top:8px;
     border: 1px solid #2d232e;
 }
 
@@ -151,6 +151,15 @@ p {
     margin-right: 15px;
 }
 
+img {
+    transition: all 2s;
+    border-radius: 5px;
+}
+
+img:hover {
+    transform: scale(1.1);
+}
+
 aside {
     margin-top: 5px;
     flex: 50%;
@@ -165,7 +174,7 @@ h1 {
     font-weight: 400;
     text-decoration: none;
     color: #2d232e;
-    margin: 10px;
+    margin-top: 5px;
     margin-right: 15px;
     margin-left: 15px;
 }
@@ -186,7 +195,7 @@ nav {
     color: white;
     padding: 15px 32px;
     margin-bottom: 5px;
-    margin-top: 10px;
+    margin-top: 15px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
