--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ header{
   background:  var(--header-color);
   color: white;
   display: flex;
-  height: 65px;
+  height: 80px;
     border-bottom-right-radius: 15px;
     border-bottom-left-radius: 15px;
 }
@@ -236,7 +236,16 @@ nav {
 		display: block;
 	}
 	header{
-		height: 120px;
+		height: 20vh;
 		display: block;
+	}
+	li{
+		height: 2em;
+		    margin-bottom: 20px;
+	}
+	ul{
+	}
+	nav{
+		height: 20vh;
 	}
 }
