--- a/style.css
+++ b/style.css
@@ -61,12 +61,12 @@ table {
 	--text-hover: #998da0;
 }
 
-*{
-    font-family: 'Roboto','Open Sans','Nunito', sans-serif;
 
-}
 body{
   background: var(--main-bg-color);
+	font-family: 'Roboto','Open Sans','Nunito', sans-serif;
+
+
 }
 header{
   background:  var(--header-color);
@@ -103,7 +103,7 @@ ul {
 
 li {
   float: left;
-	width: 95.7875px;
+	margin-right: 5px;
 
 }
 
@@ -113,8 +113,9 @@ li a {
   text-align: center;
     padding: 13px 13px;
   text-decoration: none;
+	width: 4.3em;
     margin-top:11px;
-    margin-right: 5px;
+
     border: 1px solid #998da0;
     border-radius: 3px;
 }
